# libpoisson

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  libPoisson.NBody.rst  libPoisson.rst  modules.rst
docs/_build/doctrees/: libPoisson.NBody.doctree  libPoisson.doctree  modules.doctree
docs/source/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst  solvers_tables.rst
docs/source/auto_factory/: solvers.py  tables.py
docs/source/solvers/: all_solvers.rst  index.rst
examples/: example.ipynb  example.py
include/interface/: Interface.h  defines.h  pythonify.h
libPoisson/: __init__.py  _version.py  base_solver.py  solver.py
libPoisson/api/: factory.py  get_solver.py
libPoisson/configs/: base.py  ewaldsum.py  nbody.py
libPoisson/cuda/: CMakeLists.txt
libPoisson/cuda/NBody/: nbody.py
libPoisson/cuda/NBody/utils/: image_charges.py  nbody_kernel.py  new_nbody_kernel.py
libPoisson/cuda/PMSimple/: pmsimple.py
libPoisson/cuda/UAMMD_PSE/: uammd_pse.py
libPoisson/cuda/uammd_wrapper/: CustomPSE.cu  CustomPSE.cuh  common.h  uammd_wrapper.cu
libPoisson/definitions/: boundary_conditions.py  device.py
libPoisson/parameters/: base.py  ewaldsum.py  nbody.py  spreadinterp.py
libPoisson/registry/: core.py  decorator.py  fallback.py  selector.py
libPoisson/solvers_cuda/: CMakeLists.txt  __init__.py  nbody.py  pmsimple.py  spreadinterp.py  uammd_dpslab.py  uammd_pse.py
libPoisson/solvers_cuda/PMSimple/: pmsimple.py
libPoisson/solvers_cuda/UAMMD_DPslab/: uammd_dpslab.py
libPoisson/solvers_cuda/UAMMD_PSE/: uammd_pse.py
libPoisson/solvers_cuda/uammd_wrapper/: uammd_wrapper.cu
libPoisson/solvers_cuda/utils/: image_charges.py  nbody_kernel.py
src/: CMakeLists.txt  common.h  uammd_wrapper.cu
src/libPoisson/: CMakeLists.txt  __init__.py  python_wrapper.cu  solver.py
src/libPoisson/AnalyticFourier/: analytic_fourier.py
src/libPoisson/NBody/: nbody.py
src/libPoisson/NBody/utils/: nbody_kernel.py
src/libPoisson/PMEwald/: pmedwald.py
src/libPoisson/PMSimple/: pmsimple.py
src/libPoisson/PSE/: pse.py
src/libpoisson/: CMakeLists.txt  __init__.py  python_wrapper.cu
tests/: test_DPuammd.py  test_TPuammd.py  test_analytic_fourier.py  test_interface.py  test_nbody.py  test_pmsimple.py  test_poisson.py  test_spreadinterp.py  test_uammd.py
uammd_wrapper/: CustomPSE.cu  uammd_wrapper.cu
