[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.6.0"]
build-backend = "scikit_build_core.build"

[project]
name = "libPoisson"
dynamic = 0.1.0
description = "Poisson solver for gaussian charge distributions"
readme = "README.md"
authors = [{ name = "Pablo", email = "pablodiezsilva@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy"
]

[tool.scikit-build]
wheel.install-dir = "libPoisson"

[tool.scikit-build.cmake.define]
DOUBLEPRECISION = "0"
USE_CUDA = "1"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "libPoisson/_version.py"
